# davinci-resolve-mcp-free

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml
examples/: claude_desktop_config.json  quickstart.py
resolve_pilot/: __init__.py  mcp_server.py
resolve_pilot/analyzers/: __init__.py  beats.py  media.py  scenes.py
resolve_pilot/editorial/: __init__.py  roughcut.py
resolve_pilot/exporters/: __init__.py  fcpxml.py  srt.py
resolve_pilot/lua_snippets/: __init__.py  bridge.lua  library.py
resolve_pilot/skills/resolve-batch-markers/: SKILL.md
resolve_pilot/skills/resolve-color-grade/: SKILL.md
resolve_pilot/skills/resolve-music-video/: SKILL.md
resolve_pilot/skills/resolve-rough-cut/: SKILL.md
resolve_pilot/skills/resolve-subtitle/: SKILL.md
resolve_pilot/studio_api/: __init__.py  actions.py  bridge.py
resolve_pilot/transcribe/: __init__.py  whisper.py
resolve_pilot/ui_automation/: __init__.py  ai_features.py  applescript.py
tests/: test_applescript.py  test_exporters.py  test_lua_snippets.py  test_scenes_regex.py
